--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,26 @@
             "outFiles": []
         },
         {
+            "name": "E2E test",
+            "type": "node",
+            "request": "launch",
+            "program": "${workspaceRoot}/dist/test/e2e.js",
+            "stopOnEntry": false,
+            "args": [],
+            "cwd": "${workspaceRoot}",
+            "preLaunchTask": "scripts",
+            "runtimeExecutable": null,
+            "runtimeArgs": [
+                "--nolazy"
+            ],
+            "env": {
+                "NODE_ENV": "development"
+            },
+            "console": "internalConsole",
+            "sourceMaps": false,
+            "outFiles": []
+        },
+        {
             "name": "Attach",
             "type": "node",
             "request": "attach",
